--- a/app/src/main/res/layout/card_layout_tarefas.xml
+++ b/app/src/main/res/layout/card_layout_tarefas.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,35 +17,35 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/textTarefa"
+            android:id="@+id/textTarefaCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nome Da Tarefa"
             android:textSize="28sp" />
 
         <TextView
-            android:id="@+id/textDescricao"
+            android:id="@+id/textDescricaoCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Descrição"
             android:textSize="23sp" />
 
         <TextView
-            android:id="@+id/TextRespo"
+            android:id="@+id/TextRespoCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Responsavel"
             android:textSize="23sp" />
 
         <TextView
-            android:id="@+id/textData"
+            android:id="@+id/textDataCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Data"
             android:textSize="23sp" />
 
         <Switch
-            android:id="@+id/switCard"
+            android:id="@+id/switAndamentoCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="48dp"
@@ -53,14 +53,14 @@
             android:textSize="23sp" />
 
         <TextView
-            android:id="@+id/textCategoria"
+            android:id="@+id/textCategoriaCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Categoria"
             android:textSize="23sp" />
 
         <Button
-            android:id="@+id/buttonDeletar"
+            android:id="@+id/buttonDeletarCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Delete Tarefa" />
